package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.entities.reservation.boundary.control.entity

import java.util.*

data class ReservationId(val id: UUID)