package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.entities.reservation.trip.boundary.control.entity

import java.util.*

data class TripId(val id: UUID)
