package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.confirm.boundary.dto

import java.util.*

data class ReservationDTO(val id: UUID, val status: String)